tests/ui/const-generics/generic_const_exprs/object-safety-ok-infer-err.stderr
error[E0284]: type annotations needed
  --> $DIR/object-safety-ok-infer-err.rs:19:5
   |
LL |     use_dyn(&());
   |     ^^^^^^^ cannot infer the value of the const parameter `N` declared on the function `use_dyn`
   |
note: required by a bound in `use_dyn`
  --> $DIR/object-safety-ok-infer-err.rs:14:55
   |
LL | fn use_dyn<const N: usize>(v: &dyn Foo<N>) where [u8; N + 1]: Sized {
   |                                                       ^^^^^ required by this bound in `use_dyn`
help: consider specifying the generic argument
   |
LL |     use_dyn::<N>(&());
   |            +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
